--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: mindful_minutes
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --factory app:create_app
+    startCommand: gunicorn app:app
     plan: free
     region: oregon
     branch: main
