--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ click==8.2.1
 # === Database & ORM ===
 Flask-SQLAlchemy==3.0.5
 SQLAlchemy==2.0.43
+Flask-Migrate==4.0.5  # ← ADDED THIS (uses alembic)
 alembic==1.13.2
 psycopg2-binary==2.9.10  # PostgreSQL for Render
 
@@ -18,6 +19,7 @@ Flask-WTF==1.2.1
 WTForms==3.1.2
 Flask-Talisman==1.0.0
 bcrypt==4.1.3
+echo "Flask-Migrate==4.0.5" >> requirements.txt
 
 # === Performance ===
 Flask-Caching==2.0.2
